# autoparser

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  example.ipynb  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: Makefile  conf.py  index.md  make.bat  requirements.txt
docs/api/: create_mapping.md  dict_writer.md  index.md  make_toml.md
docs/examples/: cli_example.md  example.ipynb
docs/getting_started/: index.md
docs/usage/: data_dict.md  index.md  parser_generation.md
src/autoparser/: __init__.py  __main__.py  create_mapping.py  dict_writer.py  gemini_calls.py  make_toml.py  openai_calls.py  util.py
tests/: test_dict_writer.py  test_mapper.py  test_parser_generator.py  test_utils.py  testing_data_animals.py
tests/__snapshots__/: test_parser_generator.ambr
tests/schemas/: animals.schema.json
