[project]
name = "autoparser"
description = "autoparser for LLM-supported parser generation"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"
dependencies = [
    "numpy>=2.1.2",
    "openai>=1.52.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "tomli>=2.0.2",
    "pydantic>=2.9.2",
]
scripts = { autoparser = "autoparser:main" }

[tool.uv]
package = true
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "syrupy>=4.7.2",
]

[tool.coverage.run]
omit = ["tests/*", "src/autoparser/toml_writer.py"]
